--- a/index.html
+++ b/index.html
@@ -22,12 +22,15 @@
         </header>
          <div class="main__flex_row">
                 <div class="main__flex_column_text">
-                    <div class="flex_row__name">
-                        Softoys
+                    <div style="display: flex; justify-content: center;">
+                        <div class="flex_row__name">
+                            Softoys
+                        </div>
                     </div>
-                    <div class="flex_row__info">
+                    
+                    <!--<div class="flex_row__info">
                         Интернет-магазин мягких игрушек
-                    </div>
+                    </div>-->
                     <!--<div class="discount">
                         <div style="margin: auto 40px">
                              <div style="width: 726px;">Успейте приобрести товары по скидке 25 %</div>
